--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@floating-ui/react": "^0.27.4",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
