--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/react": "^0.27.4",
+    "@hookform/resolvers": "^4.1.3",
+    "@tailwindcss/vite": "^4.0.13",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "tiny-invariant": "^1.3.3"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.13",
+    "tiny-invariant": "^1.3.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -33,5 +38,11 @@
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
