--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/react": "^0.27.4",
     "@hookform/resolvers": "^4.1.3",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.13",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
