chore: manifest & styles changes for firefox

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,6 @@
   "description": "Custom startpage extension",
   "version": "1.0",
   "chrome_url_overrides": {
-    "newtab": "index.html",
-    "resources": ["assets/*"]
+    "newtab": "index.html"
   }
 }
